k8s/geddes-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rcac-docs-dev
  namespace: rcac-docs
spec:
  ingressClassName: nginx
  rules:
    - host: rcac-docs-dev.geddes.rcac.purdue.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rcac-docs-dev
                port:
                  number: 80
